# MAC_IRL

./: .gitignore  AGENTS.md  CLAUDE.md  DATA_README.md  README.md  collect_base.py  pyproject.toml  read.md  requirements.txt  samsung_macirl_2021_2025_FINAL.csv  samsung_macirl_EXTENDED_2019_2025.csv  samsung_macirl_EXTENDED_2021_2025.csv  samsung_macirl_EXTENDED_V2019_2025.csv
.understand-anything/: .understandignore  fingerprints.json  meta.json
configs/: data.yaml  data_2019.yaml  data_context.yaml  data_continuous.yaml  data_extended.yaml  data_vkospi.yaml  experiment.yaml  experiment_2019.yaml  experiment_baseline.yaml  experiment_continuous.yaml  experiment_continuous_reward3_context.yaml  experiment_continuous_reward3_ctxmain_default.yaml  experiment_continuous_reward3_ctxmain_vkospi.yaml  experiment_continuous_reward3_nocontext.yaml  experiment_continuous_reward3_vkospi.yaml  experiment_continuous_reward3_vkospi_plus.yaml  experiment_final.yaml  experiment_inst_l1_0001.yaml  experiment_inst_l1_0003.yaml  experiment_inst_l1_0005.yaml  experiment_magnitude_vol.yaml  experiment_merged_e1.yaml  experiment_merged_e2.yaml  experiment_no_volatility.yaml  experiment_pairwise_herd.yaml  experiment_relative.yaml  experiment_tuned_kospi.yaml  experiment_underwater.yaml  features.yaml  features_baseline.yaml  features_context.yaml  features_continuous.yaml  features_continuous_confirmed.yaml  features_continuous_mirror.yaml  features_continuous_pooled.yaml  features_continuous_reward3.yaml  features_continuous_reward3_vkospi.yaml  features_continuous_reward5.yaml  (+7 more)
(+666 files in other folders)
